# aesccm-prototype

./: README.md  aesccm-prototype.cabal  stack.yaml
app/: Main.hs
src/: AESCCM.hs
test/: Spec.hs  aesccm-perf.hs
